Improves (but does not solve) green-background-white-text readability. Adjusts green-on-black to compebsate for darker default color.

--- a/static/_sass/_custom.scss
+++ b/static/_sass/_custom.scss
@@ -802,7 +802,7 @@ $tooltip-arrow-distance-from-box: -$tooltip-arrow-width * 3.4;
     .context {
       margin-left: .5em;
       &.onshore {
-        color: $useiti-green;
+        color: #9fa731; //slightly lighter $useiti-green for better readability
       }
       &.offshore {
         color: #3aa7d6; //slightly lighter $useiti-blue for better readability 
