--- a/static/_sass/base/_variables.scss
+++ b/static/_sass/base/_variables.scss
@@ -43,7 +43,7 @@ $deep-gray: #313131;
 $almost-black: #272727;
 
 $useiti-red: #d54740;
-$useiti-green: #9fa731;
+$useiti-green: #8e9618; //#9fa731; original color. change for better contrast with white text.
 $useiti-blue: #3397c2;
 $useiti-purple: #865daa;
 
